--- a/CuttingSystem3mkMobile/CuttingSystem3mkMobile.Android/CuttingSystem3mkMobile.Android.csproj
+++ b/CuttingSystem3mkMobile/CuttingSystem3mkMobile.Android/CuttingSystem3mkMobile.Android.csproj
@@ -205,6 +205,7 @@
     <AndroidResource Include="Resources\drawable\background.jpg" />
     <AndroidResource Include="Resources\drawable\icon.jpg" />
     <AndroidResource Include="Resources\drawable\backarrowwhite.png" />
+    <AndroidResource Include="Resources\drawable\qrcodeicon.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
