--- a/CuttingSystem3mkMobile/CuttingSystem3mkMobile.Android/Properties/AndroidManifest.xml
+++ b/CuttingSystem3mkMobile/CuttingSystem3mkMobile.Android/Properties/AndroidManifest.xml
@@ -5,5 +5,6 @@
 	<uses-permission android:name="android.permission.CAMERA" />
 	<uses-permission android:name="android.permission.VIBRATE" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.BATTERY_STATS" />
 	<application android:label="3mk" android:hardwareAccelerated="true"></application>
 </manifest>
