--- a/CuttingSystem3mkMobile/CuttingSystem3mkMobile.Android/packages.config
+++ b/CuttingSystem3mkMobile/CuttingSystem3mkMobile.Android/packages.config
@@ -31,6 +31,7 @@
   <package id="System.Net.Http" version="4.3.0" targetFramework="monoandroid81" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="monoandroid81" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="monoandroid81" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="monoandroid81" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="monoandroid81" />
   <package id="System.Reflection" version="4.3.0" targetFramework="monoandroid81" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="monoandroid81" />
@@ -54,6 +55,7 @@
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="monoandroid81" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="monoandroid81" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="monoandroid81" />
+  <package id="Xam.Plugin.Connectivity" version="3.2.0" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Arch.Core.Common" version="1.1.1.1" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Arch.Lifecycle.Common" version="1.1.1.1" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Arch.Lifecycle.Runtime" version="1.1.1.1" targetFramework="monoandroid81" />
@@ -76,6 +78,7 @@
   <package id="Xamarin.Android.Support.Vector.Drawable" version="28.0.0.1" targetFramework="monoandroid81" />
   <package id="Xamarin.Auth" version="1.6.0.4" targetFramework="monoandroid81" />
   <package id="Xamarin.Build.Download" version="0.4.11" targetFramework="monoandroid81" />
+  <package id="Xamarin.Essentials" version="1.1.0" targetFramework="monoandroid81" />
   <package id="Xamarin.Forms" version="3.4.0.1029999" targetFramework="monoandroid81" />
   <package id="ZXing.Net.Mobile" version="2.4.1" targetFramework="monoandroid81" />
 </packages>
