--- a/FirePlatform.Mobile/FirePlatform.WebApi/FirePlatform.Models/FirePlatform.Models.csproj
+++ b/FirePlatform.Mobile/FirePlatform.WebApi/FirePlatform.Models/FirePlatform.Models.csproj
@@ -10,4 +10,16 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="System">
+      <HintPath>System</HintPath>
+    </Reference>
+    <Reference Include="System.Data">
+      <HintPath>System.Data</HintPath>
+    </Reference>
+    <Reference Include="System.Xml">
+      <HintPath>System.Xml</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
