--- a/FirePlatform.Mobile/FirePlatform.WebApi/FirePlatform.Utils/FirePlatform.Utils.csproj
+++ b/FirePlatform.Mobile/FirePlatform.WebApi/FirePlatform.Utils/FirePlatform.Utils.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="LzString.CSharp.dotnet" Version="1.0.0" />
+    <PackageReference Include="LZStringCSharp" Version="1.3.0.26157" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
 </Project>
