--- a/FirePlatform.Mobile/FirePlatform.WebApi/FirePlatform.WebApi/FirePlatform.WebApi.csproj
+++ b/FirePlatform.Mobile/FirePlatform.WebApi/FirePlatform.WebApi/FirePlatform.WebApi.csproj
@@ -7,8 +7,10 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.0.0" />
+    <PackageReference Include="LzString.CSharp.dotnet" Version="1.0.0" />
+    <PackageReference Include="LZStringCSharp" Version="1.3.0.26157" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
   <ItemGroup>
