--- a/FirePlatform.Mobile/FirePlatform.WebApi/FirePlatform.WebApi/FirePlatform.WebApi.csproj
+++ b/FirePlatform.Mobile/FirePlatform.WebApi/FirePlatform.WebApi/FirePlatform.WebApi.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="LzString.CSharp.dotnet" Version="1.0.0" />
     <PackageReference Include="LZStringCSharp" Version="1.3.0.26157" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.10" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
